--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "googleapis": "^169.0.0",
+    "gray-matter": "^4.0.3",
     "pug": "^3.0.3"
   },
   "devDependencies": {
